# mboct-numerical-pkg

./: DESCRIPTION  INDEX  Makefile  README.md
.github/workflows/: html_ref.yml  simple.yml
inst/: numerical_tests.m  numerical_tests_01.tst  numerical_tests_02.tst  numerical_tests_03.tst  numerical_tests_04.tst  numerical_tests_05.tst  numerical_tests_06.tst  numerical_tests_07.tst  numerical_tests_08.tst  numerical_tests_09.tst  numerical_tests_10.tst  numerical_tests_11.tst  numerical_tests_12.tst  numerical_tests_13.tst  numerical_tests_14.tst  numerical_tests_15.tst  numerical_tests_16.tst  numerical_tests_17.tst  numerical_tests_18.tst  numerical_tests_19.tst  numerical_tests_20.tst  numerical_tests_21.tst  numerical_tests_22.tst  numerical_tests_23.tst  numerical_tests_24.tst  numerical_tests_25.tst  numerical_tests_26.tst  numerical_tests_27.tst  numerical_tests_28.tst  skew.m
src/: Makefile.am  Makefile.in  config.h.in  configure.ac  dsbgvx.cc  dspev.cc  eig_sym.cc  mumps.cc  ndmetis.cc  pardiso.cc  pastix.cc  sp_sym_mtimes.cc  strumpack.cc  umfpack.cc
